--- a/app/src/main/res/layout/fragment_movie_main.xml
+++ b/app/src/main/res/layout/fragment_movie_main.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_movie"
+        android:id="@+id/recyclerview_fragment_movie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
