--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="movie_item_height">250dp</dimen>
+    <dimen name="movie_detail_content_margin_left_right">0dp</dimen>
+    <dimen name="movie_detail_content_width">@dimen/match_parent</dimen>
+    <dimen name="match_parent">-1</dimen>
 </resources>
