--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -22,7 +22,6 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:minHeight="?android:attr/actionBarSize"
-            app:contentScrim="?android:attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -63,7 +62,7 @@
 
         <FrameLayout
             android:id="@+id/movie_detail"
-            android:layout_width="@dimen/movie_detail_content_width"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"/>
