--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,4 +9,12 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
 
+    <ImageView
+        android:id="@+id/img_empty_view"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_wifi"
+        android:visibility="gone"/>
+
 </RelativeLayout>
