--- a/app/src/main/res/xml/pref_main.xml
+++ b/app/src/main/res/xml/pref_main.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="@string/sortby"
+        android:title="@string/sortby"/>
+
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="@string/sortby"
+        android:title="Top Rated"/>
+
+
 </PreferenceScreen>
