--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -24,6 +24,7 @@
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
+                android:layout_marginLeft="5dp"
                 android:contentDescription="Movie Poster Image"
                 android:src= "@drawable/ic_launcher_background"/>
 
@@ -92,6 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Overview"
+                android:layout_marginLeft="8dp"
                 android:textStyle="bold"/>
 
             <TextView
@@ -100,6 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text_movie_overview_title"
                 android:paddingTop="8dp"
+                android:layout_marginLeft="8dp"
                 tools:text="A plot synopsis (called overview in the api)"/>
 
         </RelativeLayout>
