--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -15,6 +15,7 @@
         android:layout_height="@dimen/movie_item_height">
 
         <ImageView
+            android:layout_margin="5dp"
             android:id="@+id/movie_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
