--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
                 android:src="@drawable/ic_launcher_background"
-                android:contentDescription="Movie Poster"
+                android:contentDescription="Movie BackDrop"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"/>
