--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:title="@string/sortby"
+        android:title="@string/settings"
         android:id="@+id/action_sort"
         app:showAsAction="never"
-        android:icon="@drawable/ic_sort"
         android:orderInCategory="100"/>
 
 </menu>
