--- a/app/src/main/res/xml/pref_main.xml
+++ b/app/src/main/res/xml/pref_main.xml
@@ -2,9 +2,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
-        android:title="@string/settings"
+        android:title="@string/sortby"
         android:key="@string/sort"
         android:entries="@array/entries"
-        android:entryValues="@array/entries_values"
-        android:defaultValue="" />
+        android:entryValues="@array/entries_values" />
 </PreferenceScreen>
