--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5cf46e</color>
-    <color name="colorPrimaryDark">#29f74c</color>
+    <color name="colorPrimary">#ffe53935</color>
+    <color name="colorPrimaryDark">#ffc62828</color>
     <color name="colorAccent">#FF4081</color>
+    <!--<color name="colorAccent">#ff2962ff</color>-->
 </resources>
