--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_wifi"
+        android:src="@drawable/error_cloud"
+        android:contentDescription="@string/error_image"
         android:visibility="gone" />
 </RelativeLayout>
