--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -25,8 +25,9 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:layout_marginLeft="5dp"
-                android:contentDescription="Movie Poster Image"
-                android:src= "@drawable/ic_launcher_background"/>
+                android:contentDescription="@string/movie_poster"
+                android:src= "@drawable/ic_launcher_background"
+                android:layout_marginStart="5dp" />
 
             <TextView
                 android:id="@+id/movie_title"
@@ -39,8 +40,9 @@
                 android:ellipsize="end"
                 android:maxLines="3"
                 android:padding="8dp"
-                android:text="Movie Title"
-                android:fontFamily="sans-serif-condensed"/>
+                android:text="@string/movie_title"
+                android:fontFamily="sans-serif-condensed"
+                tools:targetApi="jelly_bean" />
 
             <TextView
                 android:id="@+id/text_movie_user_rating"
@@ -93,9 +95,10 @@
                 android:id="@+id/text_movie_overview_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Overview"
+                android:text="@string/overview"
                 android:layout_marginLeft="8dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginStart="8dp" />
 
             <TextView
                 android:id="@+id/text_movie_overview"
@@ -104,7 +107,8 @@
                 android:layout_below="@+id/text_movie_overview_title"
                 android:paddingTop="8dp"
                 android:layout_marginLeft="8dp"
-                tools:text="A plot synopsis (called overview in the api)"/>
+                tools:text="A plot synopsis (called overview in the api)"
+                android:layout_marginStart="8dp" />
 
         </RelativeLayout>
 
