--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="280dp"
     android:layout_gravity="center"
@@ -17,6 +16,6 @@
         android:layout_height="match_parent"
         android:background="#2d2d2d"
         android:scaleType="centerCrop"
-        android:contentDescription="Movie Poster"/>
+        android:contentDescription="@string/movie_poster"/>
 
 </android.support.v7.widget.CardView>
