--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -98,6 +98,7 @@
                 android:text="@string/overview"
                 android:layout_marginLeft="8dp"
                 android:textStyle="bold"
+                android:textSize="25sp"
                 android:layout_marginStart="8dp" />
 
             <TextView
@@ -109,6 +110,43 @@
                 android:layout_marginLeft="8dp"
                 tools:text="A plot synopsis (called overview in the api)"
                 android:layout_marginStart="8dp" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_movie_review"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/card_movie_overview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="4dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/movie_review_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/reviews"
+                android:layout_marginLeft="8dp"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_marginStart="8dp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/movie_reviews_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/movie_review_title"
+                android:layout_margin="8dp"/>
 
         </RelativeLayout>
 
