--- a/app/src/main/res/layout/item_movie_review.xml
+++ b/app/src/main/res/layout/item_movie_review.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <!--Change to CardView-->
     <TextView
         android:id="@+id/movie_review_author"
         android:layout_width="match_parent"
