--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -53,7 +53,24 @@
         android:layout_margin="16dp"
         app:layout_anchor="@id/app_bar_layout"
         android:src="@drawable/ic_favorite"
+        android:stateListAnimator="@animator/scale"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_anchorGravity="bottom|right|end"/>
+    
+    <!--<CheckBox-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:layout_anchor="@id/app_bar_layout"-->
+        <!--app:layout_anchorGravity="bottom|right|end"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:clickable="true"-->
+        <!--android:button="@null"-->
+        <!--android:stateListAnimator="@animator/scale"-->
+        <!--android:checked="false"-->
+        <!--android:background="@drawable/favorite_icon"-->
+        <!--android:focusable="true"/>-->
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
