--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,7 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    //Change this
     <ImageView
         android:id="@+id/img_empty_view"
         android:layout_width="100dp"
