--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -139,14 +139,16 @@
                 android:layout_marginLeft="8dp"
                 android:textStyle="bold"
                 android:textSize="25sp"
-                android:layout_marginStart="8dp" />
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="2dp"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/movie_reviews_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/movie_review_title"
-                android:layout_margin="8dp"/>
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"/>
 
         </RelativeLayout>
 
