--- a/app/src/main/res/layout/item_movie_review.xml
+++ b/app/src/main/res/layout/item_movie_review.xml
@@ -1,23 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginBottom="16dp">
 
     <!--Change to CardView-->
     <TextView
         android:id="@+id/movie_review_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ayo"
-        android:textSize="20sp"
-        android:padding="4dp"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:textSize="16sp"
+        tools:text="Ayo"/>
 
     <TextView
         android:id="@+id/movie_review_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/movie_review_author"
-        android:maxLines="5"
-        android:layout_marginBottom="5dp"/>
+        android:layout_alignEnd="@id/movie_review_author"
+        android:layout_alignLeft="@id/movie_review_author"
+        android:layout_alignRight="@id/movie_review_author"
+        android:layout_alignStart="@id/movie_review_author"
+        android:lineSpacingMultiplier="1.1"
+        android:layout_marginBottom="8dp"
+        android:textSize="14sp"
+        android:maxLines="5"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@android:color/darker_gray"
+        android:layout_below="@id/movie_review_content"/>
 </RelativeLayout>
