Trailers now showing
Signed-off-by: Emmaunel <aadewale123@gmail.com>

--- a/app/src/main/res/layout/item_loading.xml
+++ b/app/src/main/res/layout/item_loading.xml
@@ -6,8 +6,8 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="@dimen/item_load_more_size"
-        android:layout_height="@dimen/item_load_more_size"
+        android:layout_width="wrap_content"
+        android:layout_height= "wrap_content"
         android:layout_gravity="center"
         android:indeterminate="true" />
 
