--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -98,7 +99,7 @@
                 android:text="@string/overview"
                 android:layout_marginLeft="8dp"
                 android:textStyle="bold"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:layout_marginStart="8dp" />
 
             <TextView
@@ -116,10 +117,51 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_movie_review"
+        android:id="@+id/card_movie_trailers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/card_movie_overview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="4dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/movie_trailer_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/trailers"
+                android:layout_marginLeft="8dp"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="2dp"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/movie_trailer_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/movie_trailer_title"
+                android:orientation="horizontal"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_movie_review"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/card_movie_trailers"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="0dp"
@@ -138,7 +180,7 @@
                 android:text="@string/reviews"
                 android:layout_marginLeft="8dp"
                 android:textStyle="bold"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="2dp"/>
 
