--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -18,4 +18,12 @@
         android:contentDescription="Trailer thumbnail"
         android:src="@drawable/ic_play"/>
 
+    <TextView
+        android:id="@+id/txt_trailerName"
+        android:text="Video Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/video_thumbnail"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
