--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="item_load_more_size">48dp</dimen>
 
     <dimen name="trailer_offset">4dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
