--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -35,6 +35,7 @@
                 android:contentDescription="@string/movie_backdrop"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
+                android:transitionName="@string/image_trans"
                 app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
