--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:background="#2d2d2d"
         android:scaleType="centerCrop"
+        android:transitionName="@string/image_trans"
         android:contentDescription="@string/movie_poster"/>
 
 </android.support.v7.widget.CardView>
